--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,23 +2,9 @@
 showErrorDetails = "none"
 
 [theme]
-
-# The preset Streamlit theme that your custom theme inherits from.
-# One of "light" or "dark".
 base = "light"
-
-# Primary accent color for interactive elements.
-primaryColor = "#0c1c2e"
-
-# Background color for the main content area.
-#backgroundColor =
-
-# Background color used for the sidebar and most interactive widgets.
-#secondaryBackgroundColor =
-
-# Color used for almost all text.
-#textColor =
-
-# Font family for all text in the app, except code blocks. One of "sans serif",
-# "serif", or "monospace".
-font ="monospace"
+primaryColor="#0e4d85"
+backgroundColor="#FFFFFF"
+secondaryBackgroundColor="#f6f6f6"
+textColor="#011c3a" 
+font="sans serif"
